# rust-actix-rest-api-boilerplate

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  docker-compose.yml
data/config/: app.toml  redis.conf
sql/: db.sql
src/: main.rs
src/api/: hello.rs
src/api/authorizations/: controller.rs  mod.rs  model.rs  service.rs
src/api/user/: controller.rs  mod.rs  model.rs  service.rs
src/lib/: aes.rs  auth.rs  client.rs  error.rs  log.rs  mod.rs  redis.rs  validator.rs
src/lib/db/: mod.rs  mysql.rs  pg.rs
src/routes/: authorizations.rs  hello.rs  mod.rs  user.rs
