[package]
name = "rust-actix-rest-api-boilerplate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
actix-cors = "0.5"
config = "0.11"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.7.0"
slog-json = "2.4.0"
chrono = "0.4"
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "uuid", "postgres", "chrono", "json"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
