[package]
name = "rust-actix-rest-api-boilerplate"
version = "1.0.0"
edition = "2018"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.7.1"
actix-http = "3.10.0"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15"
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
slog-json = "2.6.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "uuid", "postgres", "chrono", "json"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
mobc = "0.8"
regex = "1"
futures = "0.3"
md5 = "0.7"
sha2 = "0.10"
jsonwebtoken = "9"
aes-gcm = "0.10.2"
base64 = "0.22"
rand = "0.9"
bytebuffer = "2.3.0"
